# kisan-mitra-voice-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.claude/skills/readme-generator/: SKILL.md
docs/: architecture.md
eval/: golden_set.jsonl  judge.py  metrics.py  run_eval.py
mcp/: server.py
mcp_server/: server.py
src/: agent.py  config.py  pipeline.py  sarvam_client.py  tools.py
tests/: test_agent.py  test_agent_stream.py  test_eval_scoring.py  test_metrics.py  test_tools.py
